--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
             background-color: #f4f4f9;
             color: #333;
         }
+        @media(max-width:768px){
+            item{width: 100%;}
+        }
         header {
             background-color: #1b4bd1;
             color: skyblue;
